# SMEpred-CDAC

./: .gitignore  HelixZero-CMS_Paper.md  README.md  railway.json  smepred_text.txt
smepred/: .dockerignore  .gitignore  Dockerfile  EXPLANATION.md  ICE_CLOUD_DEPLOYMENT.md  README.md  app.html  cmd.txt  deploy_icecloud.py  extract_all_papers.py  pyproject.toml  rename_project.py  requirements.txt  start_server.bat  test_final.py  test_pipeline.py
smepred/Params/: 01_Architecture_and_Workflow.md  02_OffTarget_and_Toxicity.md  03_Biophysical_Penalties.md  04_Modification_Engine.md  05_SeedTox_and_Functions_Deep_Dive.md  06_Organ_Targeting_and_Delivery.md  07_Technical_Implementation_and_Algorithms.md
smepred/api/: main.py
smepred/cli/: run.py
smepred/data/: all_transcripts.json  cmsirnadb_full.csv  gene_metadata.csv  hetero_val_303.csv  homo_train.csv  modification_codes.json  mrna_sequences.json  normal_siRNA.csv
smepred/deck/: SMEpred_Pitch_Deck.pptx  SPEAKER_NOTES.md  build_deck.js  build_notes_pdf.py  build_validation_pdf.py  embed_notes.py
smepred/docs/: BIOPHYSICS_MODULE.md  BIO_PHYSICS.md  CDAC_DISCUSSION.md  Certificate_offtarget_GGCAGAGACA....md  DATA_COLLECTION.md  DATA_HANDLING.md  FUNCTIONALITIES.md  HelixZero_Model_Reference.md  IMPLEMENTATION.md  LIMITATIONS_NOTES.md  LITERATURE_AUDIT.md  METRICS.md  PENALTIES_REFERENCE.md  QA_CHEATSHEET.md  SCORING_EXPLAINED.md  TECH_STACK.md  VALIDATION.md  VALIDATION_DOSSIER.md  VALIDATION_FROM_PAPERS.md  WORKFLOW_AND_TECH.md  generate_clinical_validation_pdf.py  pdf_extracts.json
smepred/logs/: calibration_meta.json  cm_model_meta.json  cm_model_v3_meta.json  cmsirnadb_validation.csv  final_diagnostic.json  hetero_val_predictions.csv  homo_model_meta.json  normal_model_meta.json  normal_model_v3_meta.json
smepred/models/: calibrate.py  calibrator_cm.pkl  calibrator_naked.pkl  model_b_meta.json  model_homo.pkl  model_normal.pkl  train_gbm.py  train_gbm_v2.py  train_gbm_v3.py
smepred/papers/: helixzero-cms-ieee-paper.md
smepred/pitch/: Adrien_Weingartner_Approach_Strategy.md  HelixZero_External_Whitepaper.md
smepred/scripts/: cross_validate_model_b.py  fda_validation.py  generate_figures_docx.py  generate_paper.py  run_scientific_validations.py  train_model_b.py  train_model_b_v4.py  validate_positional_walk.py
smepred/src/: biophysics.py  download_transcriptome.py  features.py  filters.py  modification_engine.py  mrna_features.py  offtarget.py  parser.py  predictor.py  utils.py  (+3 more)
(+31 files in other folders)
