[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "smepred"
version = "3.0.0"
description = "siRNA Modification Efficacy Predictor — rank chemical modification patterns for siRNA therapeutics"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SMEpred Team"},
]
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.81",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "scipy>=1.11",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "click>=8.1",
    "joblib>=1.3",
    "python-multipart>=0.0.6",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/your-org/smepred"
Documentation = "https://github.com/your-org/smepred#readme"

[project.scripts]
smepred = "cli.run:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cli*", "api*", "tools*"]
exclude = ["tests*"]
