[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "helixzero-cms"
version = "2.0.0"
description = "Chemical Modification Scanning for siRNA Therapeutics"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "C-DAC Pune"},
]
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.81",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "scipy>=1.11",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "click>=8.1",
    "joblib>=1.3",
    "python-multipart>=0.0.6",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/nitinjadhav888/SMEpred-CDAC"
Documentation = "https://github.com/nitinjadhav888/SMEpred-CDAC#readme"

[project.scripts]
helixzero-cms = "cli.run:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cli*", "api*", "tools*"]
exclude = ["tests*"]
